[project]
name = "py_spring_scheduler"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "William Chen", email = "ow6201231@gmail.com"},
]
dependencies = [
    "py-spring-core>=0.0.10", 
    "apscheduler>=3.11.0"
]
requires-python = ">=3.11, <3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true